Updated AspNetCore packages to 1.1.1 to patch a critical security vulnerability. Updated Application Insights to 2.0.0 in the samples app and fixed broken code. Updated to build00092

--- a/Samples/Umbrella.AspNetCore.Samples/Views/Shared/_Layout.cshtml
+++ b/Samples/Umbrella.AspNetCore.Samples/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
-    @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
+    @Html.Raw(AppInsightsJs.FullScript)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
