--- a/Samples/Umbrella.AspNetCore.Samples/Views/_ViewImports.cshtml
+++ b/Samples/Umbrella.AspNetCore.Samples/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Umbrella.AspNetCore.Samples
 @using Umbrella.AspNetCore.Samples.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet AppInsightsJs
